tests/base/parser/bad/lib/lmodule-library-with.scillib
scilla_version 0

(* should be 'TestLib' instead*)
library _TestLib

type House =
| Kind of String
